# firefly-desk

./: .dockerignore  .env.example  .gitignore  .venv  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
docs/: README.md  admin-console.md  agent-customization.md  api-reference.md  architecture.md  configuration.md  deployment.md  exports.md  file-uploads.md  getting-started.md  index.md  installation.md  knowledge-base.md  model-routing.md  processes.md  prompts-reference.md  security.md  service-catalog.md  sso-oidc.md  tools-reference.md  troubleshooting.md  user-memory.md  widgets.md
docs/help/: agent.md  audit-log.md  callbacks.md  catalog.md  credentials.md  dashboard.md  dev-tools.md  document-sources.md  email.md  exports.md  getting-started.md  git-import.md  knowledge-base.md  llm-providers.md  llm-runtime.md  memories.md  processes.md  prompts.md  search-engine.md  sso.md  tools.md  users-roles.md  workspaces.md
docs/plans/: 2026-02-23-setup-wizard-cli-implementation.md  2026-02-23-setup-wizard-cli-redesign.md  2026-02-24-admin-overhaul-design.md  2026-02-24-admin-overhaul-tier1-plan.md  2026-02-24-admin-overhaul-tier2-plan.md  2026-02-24-admin-overhaul-tier3-plan.md  2026-02-25-widget-tool-enhancements-design.md  2026-02-25-widget-tool-enhancements-plan.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
migrations/: env.py  script.py.mako
migrations/versions/: 3d54bafd6e3f_add_webhook_log_entries_and_callback_.py  a1b2c3d4e5f6_add_embedding_column_to_entities.py  add_conversation_deleted_at.py  add_is_system_and_document_sources.py  c5d6e7f8a9b0_add_embedding_column_to_entities.py  d21bc0582e47_initial_schema.py  (+2 more)
tests/: conftest.py  test_config.py  test_db.py  test_startup.py
(+823 files in other folders)
